# Street-Fighter-II-AI

./: .gitignore  LICENSE  README.md  environment.yml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
models/: __init__.py
models/DQN/: QNet.py
street_fighter_ii_ai/: __init__.py  main.py  utils.py
street_fighter_ii_ai/arena/: arena.py  training_arena.py
street_fighter_ii_ai/custom_integrations/StreetFighterIISpecialChampionEdition-Genesis/: Champion.Level1.ChunLiVsGuile.state  Champion.Level1.HondaVsChunLi.state  Champion.Level1.KenVsRyu.state  data.json  metadata.json  scenario.json
street_fighter_ii_ai/fighter/: fighter.py  replay_memory.py
street_fighter_ii_ai/fighter/a2c/: a2c_fighter.py  models.py
street_fighter_ii_ai/fighter/dqn/: dddqn_fighter.py  ddqn.py  models.py  replay_memory.py
street_fighter_ii_ai/fighter/human/: human_fighter.py
street_fighter_ii_ai/fighter/random_fighter/: random_fighter.py
street_fighter_ii_ai/models/dqn/: dqn.py  dqn_fighter.py  replay_memory.py
street_fighter_ii_ai/shared/: arena.py
street_fighter_ii_ai/shared/abc/: fighter.py
street_fighter_ii_ai/shared/wrappers/: grey_scale_observation.py  resize_observation.py  retro_output_to_torch_image_observation.py
street_fighter_ii_ai/wrappers/: __init__.py  discretised_action.py  gray_scale_observation.py  resize_observation.py  retro_output_to_tf_tensor_image_observation.py
